--- a/locale/ro_RO/app.po
+++ b/locale/ro_RO/app.po
@@ -3329,13 +3329,15 @@ msgstr "Nu ştim dacă cel mai recent răspuns la această solicitare "
 
 msgid ""
 "We will not reveal your email address to anybody unless you or\\n        the"
-" law tell us to (<a href=\"{{url}}\">details</a>). "
-msgstr "Nu îţi vom dezvălui adresa de email nimănui în afara cazurilor în care tu\\nsau legislaţia specificaţi altfel(<a href=\"{{url}}\">details</a>)."
+" law tell us to (<a href="%s">details</a>). "
+msgstr "Nu îţi vom dezvălui adresa de email nimănui în afara cazurilor în care tu"
+" sau legislaţia specificaţi altfel(<a href="%s">detalii</a>)."
 
 msgid ""
 "We will not reveal your email address to anybody unless you\\nor the law "
 "tell us to."
-msgstr "Nu îţi vom dezvălui adresa de email nimănui în afara cazurilor în care tu\\nsau legislaţia specificaţi altfel."
+msgstr "Nu îţi vom dezvălui adresa de email nimănui în afara\\ncazurilor în "
+"care tu sau legislaţia specificaţi altfel."
 
 msgid ""
 "We will not reveal your email addresses to anybody unless you\\nor the law "
@@ -3590,12 +3592,11 @@ msgstr "Nu urmărești nimic."
 msgid "You've now cleared your profile photo"
 msgstr "Acum ai şters poza ta de profil"
 
-msgid ""
-"Your <strong>name will appear publicly</strong>\\n        (<a "
-"href=\"{{why_url}}\">why?</a>)\\n        on this website and in search "
-"engines. If you\\n        are thinking of using a pseudonym, please\\n"
-"        <a href=\"{{help_url}}\">read this first</a>."
-msgstr "Numele tău <strong>va apărea public</strong> \\n (<a href=\"{{why_url}}\">de ce?</a>)\\n pe acest website și în motoarele de căutare. Dacă te\\n gândești să utilizezi un pseudonim, te rugăm \\n <a href=\"{{help_url}}\">să citești aceasta înainte</a>."
+msgid "Your <strong>name will appear publicly</strong> \\n        (<a href=\"%s\">why?</a>)\\n        on this website and in search engines. If you\\n        are thinking of using a pseudonym, please \\n        <a href=\"%s\">read this first</a>."
+msgstr "Numele tău <strong>va apărea public</strong> "
+" (<a href="%s">de ce?</a>) pe acest website și în motoarele de căutare. "
+"Dacă te gândești să utilizezi un pseudonim, te rugăm <a href=href="%s">"
+"să citești aceasta înainte</a>."
 
 msgid "Your annotations"
 msgstr "Adnotările tale"
