--- a/locale/ro_RO/app.po
+++ b/locale/ro_RO/app.po
@@ -872,9 +872,15 @@ msgid "Did you mean: {{correction}}"
 msgstr "Aţi vrut să spuneţi:  {{correction}}"
 
 msgid ""
+"This is an FOI request done via the {{site_name}} website. This footer has "
+"been overriden by the sample Alaveteli theme."
+msgstr "Aceasta este o solicitare de acces la informații trimisă automat de pe "
+"platforma {{site_name}}."
+
+msgid ""
 "Disclaimer: This message and any reply that you make will be published on "
 "the internet. Our privacy and copyright policies:"
-msgstr "Disclaimer: Acest mesaj şi orice răspuns pe care îl primiţi va fi publicat pe Internet. Politicile noastre privind confidenţialitatea:"
+msgstr "Atenție: Acest mesaj şi orice răspuns pe care îl primiţi va fi publicat pe Internet. Politicile noastre privind confidenţialitatea:"
 
 msgid "Disclosure log"
 msgstr "Disclosure log"
@@ -959,9 +965,9 @@ msgid "Event {{id}}"
 msgstr "Eveniment {{id}}"
 
 msgid ""
-"Everything that you enter on this page, including <strong>your "
-"name</strong>,\\n                will be <strong>displayed publicly</strong>"
-" on\\n                this website forever (<a href="%s">why?</a>)."
+"Everything that you enter on this page, including <strong>your name</strong>, \\n"
+"                will be <strong>displayed publicly</strong> on\\n"
+"                this website forever (<a href="%s">why?</a>)."
 msgstr ""
 "Tot ce introduci pe această pagină, inclusiv <strong>numele tău</strong>, "
 "va fi <strong>făcut public</strong> pe acest site permanent "
