--- a/locale/ro_RO/app.po
+++ b/locale/ro_RO/app.po
@@ -317,7 +317,7 @@ msgid ""
 "<strong> Can I request information about myself?</strong>\\n\t\t\t<a "
 "href=\"%s\">No! (Click here for details)</a>"
 msgstr "<strong>Pot să solicit informaţii despre mine?</strong>"
-"<a href=\"%s\">Nu! (Click aici pentur detalii)</a>"
+"<a href=\"%s\">Nu! (Click aici pentru detalii)</a>"
 
 msgid ""
 "<strong><code>commented_by:tony_bowden</code></strong> to search annotations"
